; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_libwebpenc.c_libwebp_encode_frame.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_libwebpenc.c_libwebp_encode_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_23__ = type { %struct.TYPE_21__* }
%struct.TYPE_21__ = type { i32 }
%struct.TYPE_22__ = type { i32, i32 }
%struct.TYPE_19__ = type { i32, i32, %struct.TYPE_20__* }
%struct.TYPE_20__ = type { i32, i32, i32 }

@WebPMemoryWrite = common dso_local global i32 0, align 4
@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"WebPEncode() failed with error: %d\0A\00", align 1
@AV_PKT_FLAG_KEY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_23__*, %struct.TYPE_22__*, i32*, i32*)* @libwebp_encode_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @libwebp_encode_frame(%struct.TYPE_23__* %0, %struct.TYPE_22__* %1, i32* %2, i32* %3) #0 {
  %5 = alloca %struct.TYPE_23__*, align 8
  %6 = alloca %struct.TYPE_22__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_21__*, align 8
  %10 = alloca %struct.TYPE_19__*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca %struct.TYPE_20__, align 4
  %13 = alloca i32, align 4
  store %struct.TYPE_23__* %0, %struct.TYPE_23__** %5, align 8
  store %struct.TYPE_22__* %1, %struct.TYPE_22__** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %14 = load %struct.TYPE_23__*, %struct.TYPE_23__** %5, align 8
  %15 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_21__*, %struct.TYPE_21__** %15, align 8
  store %struct.TYPE_21__* %16, %struct.TYPE_21__** %9, align 8
  store %struct.TYPE_19__* null, %struct.TYPE_19__** %10, align 8
  store i32* null, i32** %11, align 8
  %17 = bitcast %struct.TYPE_20__* %12 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %17, i8 0, i64 12, i1 false)
  %18 = load %struct.TYPE_23__*, %struct.TYPE_23__** %5, align 8
  %19 = load %struct.TYPE_21__*, %struct.TYPE_21__** %9, align 8
  %20 = load i32*, i32** %7, align 8
  %21 = call i32 @ff_libwebp_get_frame(%struct.TYPE_23__* %18, %struct.TYPE_21__* %19, i32* %20, i32** %11, %struct.TYPE_19__** %10)
  store i32 %21, i32* %13, align 4
  %22 = load i32, i32* %13, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %4
  br label %75

25:                                               ; preds = %4
  %26 = call i32 @WebPMemoryWriterInit(%struct.TYPE_20__* %12)
  %27 = load %struct.TYPE_19__*, %struct.TYPE_19__** %10, align 8
  %28 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %27, i32 0, i32 2
  store %struct.TYPE_20__* %12, %struct.TYPE_20__** %28, align 8
  %29 = load i32, i32* @WebPMemoryWrite, align 4
  %30 = load %struct.TYPE_19__*, %struct.TYPE_19__** %10, align 8
  %31 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %30, i32 0, i32 1
  store i32 %29, i32* %31, align 4
  %32 = load %struct.TYPE_21__*, %struct.TYPE_21__** %9, align 8
  %33 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %32, i32 0, i32 0
  %34 = load %struct.TYPE_19__*, %struct.TYPE_19__** %10, align 8
  %35 = call i32 @WebPEncode(i32* %33, %struct.TYPE_19__* %34)
  store i32 %35, i32* %13, align 4
  %36 = load i32, i32* %13, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %49, label %38

38:                                               ; preds = %25
  %39 = load %struct.TYPE_23__*, %struct.TYPE_23__** %5, align 8
  %40 = load i32, i32* @AV_LOG_ERROR, align 4
  %41 = load %struct.TYPE_19__*, %struct.TYPE_19__** %10, align 8
  %42 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = call i32 @av_log(%struct.TYPE_23__* %39, i32 %40, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 %43)
  %45 = load %struct.TYPE_19__*, %struct.TYPE_19__** %10, align 8
  %46 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 8
  %48 = call i32 @ff_libwebp_error_to_averror(i32 %47)
  store i32 %48, i32* %13, align 4
  br label %75

49:                                               ; preds = %25
  %50 = load %struct.TYPE_23__*, %struct.TYPE_23__** %5, align 8
  %51 = load %struct.TYPE_22__*, %struct.TYPE_22__** %6, align 8
  %52 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %12, i32 0, i32 1
  %53 = load i32, i32* %52, align 4
  %54 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %12, i32 0, i32 1
  %55 = load i32, i32* %54, align 4
  %56 = call i32 @ff_alloc_packet2(%struct.TYPE_23__* %50, %struct.TYPE_22__* %51, i32 %53, i32 %55)
  store i32 %56, i32* %13, align 4
  %57 = load i32, i32* %13, align 4
  %58 = icmp slt i32 %57, 0
  br i1 %58, label %59, label %60

59:                                               ; preds = %49
  br label %75

60:                                               ; preds = %49
  %61 = load %struct.TYPE_22__*, %struct.TYPE_22__** %6, align 8
  %62 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %61, i32 0, i32 1
  %63 = load i32, i32* %62, align 4
  %64 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %12, i32 0, i32 0
  %65 = load i32, i32* %64, align 4
  %66 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %12, i32 0, i32 1
  %67 = load i32, i32* %66, align 4
  %68 = call i32 @memcpy(i32 %63, i32 %65, i32 %67)
  %69 = load i32, i32* @AV_PKT_FLAG_KEY, align 4
  %70 = load %struct.TYPE_22__*, %struct.TYPE_22__** %6, align 8
  %71 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %70, i32 0, i32 0
  %72 = load i32, i32* %71, align 4
  %73 = or i32 %72, %69
  store i32 %73, i32* %71, align 4
  %74 = load i32*, i32** %8, align 8
  store i32 1, i32* %74, align 4
  br label %75

75:                                               ; preds = %60, %59, %38, %24
  %76 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %12, i32 0, i32 0
  %77 = load i32, i32* %76, align 4
  %78 = call i32 @free(i32 %77)
  %79 = load %struct.TYPE_19__*, %struct.TYPE_19__** %10, align 8
  %80 = call i32 @WebPPictureFree(%struct.TYPE_19__* %79)
  %81 = call i32 @av_freep(%struct.TYPE_19__** %10)
  %82 = call i32 @av_frame_free(i32** %11)
  %83 = load i32, i32* %13, align 4
  ret i32 %83
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @ff_libwebp_get_frame(%struct.TYPE_23__*, %struct.TYPE_21__*, i32*, i32**, %struct.TYPE_19__**) #2

declare dso_local i32 @WebPMemoryWriterInit(%struct.TYPE_20__*) #2

declare dso_local i32 @WebPEncode(i32*, %struct.TYPE_19__*) #2

declare dso_local i32 @av_log(%struct.TYPE_23__*, i32, i8*, i32) #2

declare dso_local i32 @ff_libwebp_error_to_averror(i32) #2

declare dso_local i32 @ff_alloc_packet2(%struct.TYPE_23__*, %struct.TYPE_22__*, i32, i32) #2

declare dso_local i32 @memcpy(i32, i32, i32) #2

declare dso_local i32 @free(i32) #2

declare dso_local i32 @WebPPictureFree(%struct.TYPE_19__*) #2

declare dso_local i32 @av_freep(%struct.TYPE_19__**) #2

declare dso_local i32 @av_frame_free(i32**) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
